--- a/.github/workflows/file.yaml
+++ b/.github/workflows/file.yaml
@@ -1,1 +1,12 @@
+name: Example Workflow
+
+on: [push]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Say Hello
+        run: echo "Hello from GitHub Actions"
 
